projekt-compiler/test/builtInCommand/list/fail/s_breakup2.rail
$'main'(--):
 \
  \
   \
    \---[a]---[b]:---[c]:---[d]:---[e]:----~---o---~---o---~---o---~---o----o---#